Fix absolute path in base template, fix template reference in install.sh

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <title>{% block title %}Maintenance mode{% endblock %}</title>
     {% block stylesheets %}
-        <link rel="stylesheet" href="css/main.css">
+        <link rel="stylesheet" href="/css/main.css">
     {% endblock %}
 </head>
 <body>
 <header>
     <div class="container">
         {% block header %}
-            <img src="img/logo.svg" width="40" height="40" alt="Logo" class="logo">
+            <img src="/img/logo.svg" width="40" height="40" alt="Logo" class="logo">
             <p class="title">Maintenance page</p>
         {% endblock %}
     </div>
