--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -12,7 +12,7 @@
     <div class="container">
         {% block header %}
             <img src="/img/logo.svg" width="40" height="40" alt="Logo" class="logo">
-            <p class="title">Maintenance page</p>
+            <p class="title">{% block title %}Maintenance page{% endblock %}</p>
         {% endblock %}
     </div>
 </header>
